# gitrecon

./: .dockerignore  .gitignore  README.md  Taskfile.yml  main.py  package-lock.json  package.json  pyproject.toml
datasets/: setups.ipynb
docs/: tests-with-md-parsing-and-rattish-implementations.ipynb
tools/: datasets_setups.py  draft-tests.py
