[project]
name = "gistrecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darkpoint>=0.2.0",
    "gitpython>=3.1.46",
    "larc>=0.0.27",
    "marko>=2.2.2",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "chromadb>=1.5.5",
    "datasets>=4.8.3",
    "docker>=7.1.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.7.2",
    "litellm[proxy]>=1.82.6",
    "marimo>=0.21.1",
    "ngrok>=1.7.0",
    "notebook>=7.5.5",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "podman>=5.7.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "transformers>=5.3.0",
    "xai>=0.3.0",
]
